<?xml version="1.0"?>
<package>
  <name>ontoreef_moveit_scene_manager</name>
  <version>0.5.0</version>
  <description>Populate mmoveit planning scene.</description>

  <maintainer email="alessio.capitanelli@gmail.com">Alessio Capitanelli</maintainer>
  <author email="alessio.capitanelli@gmail.com">Alessio Capitanelli</author>
  <url type="website">https://github.com/EmaroLab</url> 
  <license>GPLv2</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ontoreef_msgs</build_depend>
  <build_depend>pitt_msgs</build_depend>

  <run_depend>pitt_object_table_segmentation</run_depend>
  <run_depend>pitt_geometric_tracking</run_depend>
  <run_depend>ontoreef_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pitt_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>